--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.9.1",
-    "@types/react": "^17.0.21",
+    "@types/plotly.js-basic-dist": "^1.54.0",
     "@types/react-dom": "^17.0.9",
+    "apexcharts": "^3.28.1",
+    "plotly.js-basic-dist": "^2.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-plotly.js": "^2.5.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
@@ -40,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.21",
+    "@types/react-plotly.js": "^2.5.0"
   }
 }
